--- a/templates/index.html
+++ b/templates/index.html
@@ -16,18 +16,18 @@
     <div id="plots">
         <!-- Plot images will be displayed here after processing -->
         <h2>Generated Plots</h2>
-        <img id="number_of_interactions" src="/static/number_of_interactions.png" alt="Number of Interactions" style="display: none;">
-        <img id="email_rate_distribution" src="/static/email_rate_distribution.png" alt="Email Rate Distribution" style="display: none;">
-        <img id="sentiment_analysis_pie_chart" src="/static/sentiment_analysis_pie_chart.png" alt="Sentiment Analysis Pie Chart" style="display: none;">
-        <img id="number_of_invitations" src="/static/number_of_invitations.png" alt="Number of Invitations" style="display: none;">
-        <img id="email_rate_vs_interactions" src="/static/email_rate_vs_interactions.png" alt="Email Rate vs. Interactions" style="display: none;">
+        <img id="number_of_interactions">
+        <img id="email_rate_distribution">
+        <img id="sentiment_analysis_pie_chart">
+        <img id="number_of_invitations">
+        <img id="email_rate_vs_interactions">
     </div>
 
     <script>
         document.getElementById('uploadForm').addEventListener('submit', function(event) {
             event.preventDefault();
             const formData = new FormData(this);
-    
+
             fetch('/process_emails', {
                 method: 'POST',
                 body: formData
@@ -37,16 +37,12 @@
                 if (data.error) {
                     alert('Error processing emails: ' + data.error);
                 } else {
-                    const timestamp = new Date().getTime(); // Unique timestamp
-    
-                    // Update image sources with a unique query parameter
-                    document.getElementById('number_of_interactions').src = `/static/number_of_interactions.png?${timestamp}`;
-                    document.getElementById('email_rate_distribution').src = `/static/email_rate_distribution.png?${timestamp}`;
-                    document.getElementById('sentiment_analysis_pie_chart').src = `/static/sentiment_analysis_pie_chart.png?${timestamp}`;
-                    document.getElementById('number_of_invitations').src = `/static/number_of_invitations.png?${timestamp}`;
-                    document.getElementById('email_rate_vs_interactions').src = `/static/email_rate_vs_interactions.png?${timestamp}`;
-    
-                    // Display the images
+                    document.getElementById('number_of_interactions').src = '/static/number_of_interactions.png'
+                    document.getElementById('email_rate_distribution').src = '/static/email_rate_distribution.png'
+                    document.getElementById('sentiment_analysis_pie_chart').src = '/static/sentiment_analysis_pie_chart.png'
+                    document.getElementById('number_of_invitations').src = '/static/number_of_invitations.png'
+                    document.getElementById('email_rate_vs_interactions').src = '/static/email_rate_vs_interactions.png'
+
                     document.getElementById('number_of_interactions').style.display = 'block';
                     document.getElementById('email_rate_distribution').style.display = 'block';
                     document.getElementById('sentiment_analysis_pie_chart').style.display = 'block';
@@ -59,6 +55,5 @@
             });
         });
     </script>
-    
 </body>
 </html>
