--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
         <h2>Summary</h2>
         <p>Number of initiations: <span id="num_initiations"></span></p>
         <p>Total number of emails exchanged: <span id="num_emails"></span></p>
-        <p>Average number of emails sent per month: <span id="avg_emails_per_month"></span></p>
+        <p>Average number of interactions per month: <span id="avg_emails_per_month"></span></p>
         <p>Average response time (hours): <span id="avg_response_time"></span></p>
         <p>Average sentiment score: <span id="avg_sentiment_score"></span></p>
         <p>Average personalization score: <span id="avg_personalization_score"></span></p>
