--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,23 +1,22 @@
 {% extends "nav.html" %}
 
 {% block styles %}
-    #dashboard-container {
-        width: 100%;
-        height: 80vh; /* Adjust as needed */
-        border: none;
-    }
+    <style>
+        #dashboard-container {
+            width: 100%;
+            height: 80vh; /* Adjust height as needed */
+            border: none;
+        }
+    </style>
 {% endblock %}
 
 {% block content %}
-    View Your Inboxes or Add One
-    <div id="dashboard-container">
-        {% if dash_url %}
-        <iframe src="{{ dash_url }}" width="100%" height="100%" frameborder="0"></iframe>
-        {% else %}
-        <p>Select an account to view the dashboard.</p>
-        {% endif %}
-    </div>
-    {% for entry in data%}
-        <p>{{ entry }}</p>
-    {% endfor %}
+    <!-- Embed the Dash dashboard -->
+    <h2>Account Dashboard</h2>
+    
+    {% if dash_url %}
+        <iframe id="dashboard-container" src="{{ dash_url }}" width="100%" height="100%" frameborder="0"></iframe>
+    {% else %}
+        <p>Select an inbox to view the dashboard.</p>
+    {% endif %}
 {% endblock %}
