--- a/templates/nav.html
+++ b/templates/nav.html
@@ -16,27 +16,30 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/dashboard">Dashboard</a>
+                    <a class="nav-link" href="/dashboard">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/users/logout">Logout</a>
                 </li>
+                <li class="nav-item">
+                    <button class="btn btn-outline-primary openbtn" onclick="toggleSidebar()">☰ View</button>
+                </li>
             </ul>
         </div>
     </nav>
-
-    <button class="openbtn" onclick="toggleSidebar()">☰ Open</button>
-
+    
+    <!-- <button class="openbtn" onclick="toggleSidebar()">☰ Open</button> -->
+    
     <div id="mySidebar" class="sidebar">
         <p style="display: block;">placeholder</p>
-            {% for account in accounts %}
-                <a href="{{ url_for('dashboard', account_id=account['id']) }}">{{ account['email'] }}</a>
-            {% endfor %}
+        {% for account in accounts %}
+        <a href="{{ url_for('dashboard', account_id=account['id']) }}">{{ account['email'] }}</a>
+        {% endfor %}
         <div class="bottom-btn">
             <a href="{{ url_for('analyze.process_inbox') }}">Add New Inbox</a>
         </div>
     </div>
-
+    
     <div class="content">
         {% block content %}{% endblock %}
     </div>
