--- a/static/css/upload.css
+++ b/static/css/upload.css
@@ -43,7 +43,7 @@ input[type="file"] {
     width: 100%;
     padding: 12px;
     border: none;
-    background: #007bff;
+    background: #111;
     color: #ffffff;
     border-radius: 8px;
     font-size: 18px;
@@ -53,7 +53,7 @@ input[type="file"] {
 }
 
 .submit-button:hover {
-    background: #0056b3;
+    background: #444;
 }
 
 #loading {
