Filter feature complete

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -19,6 +19,9 @@
                     <a class="nav-link" href="/dashboard">Home</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/blocked">Blocked Contacts</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/users/logout">Logout</a>
                 </li>
                 <li class="nav-item">
@@ -27,9 +30,7 @@
             </ul>
         </div>
     </nav>
-    
-    <!-- <button class="openbtn" onclick="toggleSidebar()">☰ Open</button> -->
-    
+        
     <div id="mySidebar" class="sidebar">
         <p style="display: block;">placeholder</p>
         {% for account in accounts %}
