--- a/templates/upload.html
+++ b/templates/upload.html
@@ -40,6 +40,7 @@
                 } else {
                     document.getElementById('loading').style.display = 'none';
                     alert(response.success)
+                    window.location.reload();
                 }
             } catch (error) {
                 document.getElementById('loading').style.display = 'none';
